testsuite/tests/rename/should_fail/rnfail003.hs
-- !!! split definition of f (error)
f [] = []
g x = x
f (x:xs) = []
