testsuite/tests/rename/should_fail/rnfail003.stderr
rnfail003.hs:4:1: error: [GHC-29916] Multiple declarations of ‘f’
    At: rnfail003.hs:4:1
        rnfail003.hs:2:1

